fix(mastodon): column-header background contrast issues (#1384)
fix(mastodon): fix maston column-header button background too high contrast

--- a/styles/mastodon/catppuccin.user.css
+++ b/styles/mastodon/catppuccin.user.css
@@ -2,7 +2,7 @@
 @name Mastodon Catppuccin
 @namespace github.com/catppuccin/userstyles/styles/mastodon
 @homepageURL https://github.com/catppuccin/userstyles/tree/main/styles/mastodon
-@version 2.0.1
+@version 2.0.2
 @updateURL https://github.com/catppuccin/userstyles/raw/main/styles/mastodon/catppuccin.user.css
 @supportURL https://github.com/catppuccin/userstyles/issues?q=is%3Aopen+is%3Aissue+label%3Amastodon
 @description Soothing pastel theme for Mastodon
@@ -452,9 +452,16 @@ domain("fosstodon.org") {
       }
     }
 
+    .column-header__button {
+      background: @base;
+
+      &:hover {
+        background: @surface0;
+      }
+    }
+
     .search-popout,
     .drawer__header a:hover,
-    .column-header__button:hover,
     .account__section-headline button:hover,
     .account__section-headline a:hover {
       background: @surface2;
